--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,7 @@ LT_INIT
 AC_HEADER_STDC
 
 PKG_CHECK_MODULES(OPENSSL, [ openssl >= 0.9.8 ])
+PKG_CHECK_MODULES([GLIB], [glib-2.0])
 AC_SUBST(OPENSSL_CFLAGS)
 AC_SUBST(OPENSSL_LIBS)
 AC_CHECK_HEADER(unistd.h)
