--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,8 @@ Build-Depends: asciidoc,
  libssl-dev,
  openssl,
  pkg-config,
- xsltproc
+ xsltproc,
+ libglib2.0-dev
 Homepage: http://www.gooroom.kr
 Vcs-Git: https://github.com/gooroom/ima-evm-utils
 Vcs-Browser: https://github.com/gooroom/ima-evm-utils
