--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,8 @@ Build-Depends: asciidoc,
  libssl-dev,
  openssl,
  pkg-config,
- xsltproc
+ xsltproc,
+ libglib2.0-dev
 
 Package: ima-evm-utils
 Architecture: any
