Rebased on gooroom-4.0
Change-Id: I88881ed4643f5eeb15c349790cccf1c72923ab86

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,8 @@ Build-Depends: asciidoc,
  openssl,
  pkg-config,
  xsltproc,
- xxd
+ xxd,
+ libglib2.0-dev
 Homepage: https://sourceforge.net/projects/linux-ima/
 Vcs-Browser: https://salsa.debian.org/lumag/ima-evm-utils
 Vcs-Git: https://salsa.debian.org/lumag/ima-evm-utils.git
